--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@open_brainiac/electron-ipc-router",
-  "version": "1.0.0-beta",
+  "version": "1.0.0-beta.0",
   "description": "",
   "main": "index.js",
   "scripts": {
